--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
 <meta charset="UTF-8">
 <title>Gramin Sewa Center | Official Assam & India Digital Portal 2026</title>
 
-<meta name="description" content="One-stop digital portal for Aadhaar, PAN, Voter, RCMS Assam, PM Kisan, and all government services.">
-<meta name="keywords" content="Gramin Sewa Center, Assam Govt Services, RCMS Assam, 7086402180">
+<meta name="title" content="Gramin Sewa Center | All Government Digital Services 2026">
+<meta name="description" content="Official Gramin Sewa Center portal providing easy access to Aadhaar, PAN, Voter ID, RCMS Assam, Sewa Setu, PM Kisan, and all Indian government digital services. Empowering rural India through Digital India mission 2026.">
+<meta name="keywords" content="Gramin Sewa Center, Assam Govt Services, RCMS Assam, Sewa Setu, PM Kisan Status, Aadhaar Download, PAN Card India, Dharitree Jamabandi, Mission Basundhara, APDCL Bill Pay, Digital India 2026, 7086402180">
+<meta name="author" content="Gramin Sewa Center">
+<meta name="robots" content="index, follow">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://gsc-portal.github.io/GSC-Portal-/">
+<meta property="og:title" content="Gramin Sewa Center | Your Trusted Digital Service Partner">
+<meta property="og:description" content="Access all Indian and Assam Government digital services in one place. Fast, Secure, and Reliable.">
+<meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/1162/1162933.png">
+
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://gsc-portal.github.io/GSC-Portal-/">
+<meta property="twitter:title" content="Gramin Sewa Center | Digital Gateway 2026">
+<meta property="twitter:description" content="One-stop digital aggregator for all government services in India and Assam.">
 
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700&display=swap" rel="stylesheet">
 <style>
@@ -25,16 +39,14 @@
   --text: #f1f5f9;
   --white: #1e293b;
 }
-
 body { margin: 0; font-family: 'Outfit', sans-serif; background: var(--bg); scroll-behavior: smooth; color: var(--text); transition: 0.3s; }
 
-/* --- Fixed Scrolling Info Bar --- */
+/* --- Attractive Sticky Scrolling Info Bar --- */
 .info-bar-container {
   background: linear-gradient(90deg, #0a2e5c, #2563eb, #0a2e5c);
   color: white;
   white-space: nowrap;
   overflow: hidden;
-  box-sizing: border-box;
   padding: 12px 0;
   border-bottom: 2px solid var(--accent);
   position: sticky;
@@ -54,9 +66,9 @@ body { margin: 0; font-family: 'Outfit', sans-serif; background: var(--bg); scro
   100% { transform: translateX(-100%); }
 }
 
-header { background: linear-gradient(135deg, #06172e 0%, #1e40af 50%, #2563eb 100%); color: white; padding: 60px 20px 90px; text-align: center; position: relative; }
+header { background: linear-gradient(135deg, #06172e 0%, #1e40af 50%, #2563eb 100%); color: white; padding: 60px 20px 90px; text-align: center; position: relative; overflow: hidden; }
 .top-controls { position: absolute; top: 20px; right: 20px; display: flex; gap: 10px; z-index: 100; }
-.icon-btn { background: rgba(255,255,255,0.2); border: none; padding: 10px; border-radius: 50%; cursor: pointer; color: white; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; }
+.icon-btn { background: rgba(255,255,255,0.2); border: none; padding: 10px; border-radius: 50%; cursor: pointer; font-size: 18px; color: white; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; }
 
 @keyframes neon-blink {
   0% { box-shadow: 0 0 5px #2563eb; border-color: #2563eb; }
@@ -67,7 +79,7 @@ header { background: linear-gradient(135deg, #06172e 0%, #1e40af 50%, #2563eb 10
 .widgets-bar { display: flex; justify-content: center; gap: 20px; margin-top: 20px; flex-wrap: wrap; }
 .widget-item { background: rgba(255, 255, 255, 0.15); backdrop-filter: blur(10px); padding: 10px 20px; border-radius: 15px; font-size: 14px; border: 1px solid rgba(255,255,255,0.2); }
 .cat-nav { display: flex; justify-content: center; gap: 8px; flex-wrap: wrap; margin-top: 25px; }
-.cat-btn { background: var(--white); border: none; color: var(--secondary); padding: 10px 18px; border-radius: 20px; cursor: pointer; font-weight: 500; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
+.cat-btn { background: var(--white); border: none; color: var(--secondary); padding: 10px 18px; border-radius: 20px; cursor: pointer; transition: 0.3s; font-weight: 500; box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
 .cat-btn:hover { background: var(--accent); color: white; transform: translateY(-2px); }
 
 .search-container { max-width: 700px; margin: -35px auto 40px; padding: 0 20px; position: relative; z-index: 20; }
@@ -78,15 +90,34 @@ header { background: linear-gradient(135deg, #06172e 0%, #1e40af 50%, #2563eb 10
 .section-title::after { content: ""; flex: 1; height: 2px; background: #cbd5e1; }
 .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 25px; }
 
-.card { background: var(--card-bg); padding: 30px 20px; border-radius: 24px; text-decoration: none; color: var(--text); display: flex; flex-direction: column; align-items: center; text-align: center; border: 3px solid #2563eb; animation: neon-blink 2s infinite ease-in-out; transition: 0.4s; }
+.card {
+  background: var(--card-bg);
+  padding: 30px 20px;
+  border-radius: 24px;
+  text-decoration: none;
+  color: var(--text);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  transition: 0.4s;
+  border: 3px solid #2563eb;
+  animation: neon-blink 2s infinite ease-in-out;
+}
 .card:hover { transform: translateY(-12px); }
+
 .logo-box { width: 85px; height: 85px; background: #f8fafc; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-bottom: 18px; overflow: hidden; }
 .logo-box img { width: 60px; height: 60px; object-fit: contain; }
 
+/* Modal Design Update for Larger Text */
 .modal { display: none; position: fixed; z-index: 2000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); backdrop-filter: blur(8px); }
-.modal-content { background: var(--card-bg); color: var(--text); margin: 5% auto; padding: 40px; border-radius: 30px; width: 85%; max-width: 800px; max-height: 85vh; overflow-y: auto; position: relative; border: 2px solid var(--secondary); }
+.modal-content { background: var(--card-bg); color: var(--text); margin: 2% auto; padding: 40px; border-radius: 30px; width: 90%; max-width: 900px; max-height: 90vh; overflow-y: auto; position: relative; border: 2px solid var(--secondary); line-height: 1.6; }
+.modal-content h2 { color: var(--secondary); border-bottom: 2px solid var(--accent); display: inline-block; margin-bottom: 20px; }
+.modal-content h3 { margin-top: 25px; color: var(--primary); }
+.modal-content p, .modal-content ul { font-size: 16px; margin-bottom: 15px; }
 .close-modal { position: absolute; top: 20px; right: 25px; font-size: 35px; cursor: pointer; color: var(--accent); }
 
+/* Floating Buttons */
 .fixed-actions { position: fixed; bottom: 25px; right: 25px; display: flex; flex-direction: column; gap: 15px; z-index: 1000; }
 .float-btn { width: 55px; height: 55px; border-radius: 50%; display: flex; align-items: center; justify-content: center; text-decoration: none; color: white; box-shadow: 0 6px 15px rgba(0,0,0,0.3); transition: 0.3s; font-size: 24px; border: none; cursor: pointer; }
 .wa-float { background: #25d366; }
@@ -94,8 +125,8 @@ header { background: linear-gradient(135deg, #06172e 0%, #1e40af 50%, #2563eb 10
 
 footer { background: #06172e; color: white; text-align: center; padding: 60px 20px; margin-top: 80px; }
 .footer-links { margin-top: 20px; display: flex; justify-content: center; gap: 15px; flex-wrap: wrap; }
-.footer-links a { color: #cbd5e1; text-decoration: none; font-size: 14px; cursor: pointer; transition: 0.3s; }
-.footer-links a:hover { color: var(--accent); }
+.footer-links a { color: #cbd5e1; text-decoration: none; font-size: 14px; cursor: pointer; transition: 0.3s; border-bottom: 1px solid transparent; }
+.footer-links a:hover { border-bottom: 1px solid var(--accent); color: var(--accent); }
 .visitor-counter { margin-top: 20px; font-size: 14px; color: var(--accent); font-weight: 700; background: rgba(255,255,255,0.1); display: inline-block; padding: 8px 18px; border-radius: 30px; }
 </style>
 </head>
@@ -103,12 +134,12 @@ footer { background: #06172e; color: white; text-align: center; padding: 60px 20
 
 <div class="info-bar-container">
   <div class="scrolling-text">
-    🚀 Welcome to Gramin Sewa Center 2026 • Official Digital Gateway for Aadhaar, PAN, Voter Card, RCMS Assam, Sewa Setu and 50+ Other Services • Serving Rural India with Pride 🚀
+    🚀 Welcome to Gramin Sewa Center 2026 • Official Digital Gateway for Aadhaar, PAN, Voter Card, RCMS Assam, Sewa Setu and all other services • Serving Rural India with Pride 🚀
   </div>
 </div>
 
 <div class="top-controls">
-  <button class="icon-btn" onclick="toggleTheme()">🌙</button>
+  <button class="icon-btn" onclick="toggleTheme()" title="Toggle Dark Mode">🌙</button>
 </div>
 
 <header>
@@ -263,7 +294,7 @@ footer { background: #06172e; color: white; text-align: center; padding: 60px 20
 
 <div class="fixed-actions">
   <button class="float-btn scroll-float" id="scrollBtn" onclick="window.scrollTo({top:0, behavior:'smooth'})">↑</button>
-  <a href="https://WA.me/917086402180" class="float-btn wa-float" target="_blank">💬</a>
+  <a href="https://WA.me/917086402180" class="float-btn wa-float" target="_blank" title="Contact on WhatsApp">💬</a>
 </div>
 
 <footer>
@@ -276,15 +307,14 @@ footer { background: #06172e; color: white; text-align: center; padding: 60px 20
     <a onclick="showPage('terms')">Terms & Conditions</a>
   </div>
   <div class="visitor-counter">👥 Visitors: <span id="count-display">0</span></div>
-  <p style="font-size: 11px; opacity: 0.6; margin-top: 15px;">© 2026 All-FreeTools. All Rights Reserved.</p>
+  <p style="font-size: 11px; opacity: 0.6; margin-top: 15px;">© 2026 Gramin Sewa Center. All Rights Reserved.</p>
 </footer>
 
 <script>
-// DATE DISPLAY
 document.getElementById('current-date').innerText = new Date().toLocaleDateString('en-IN', { weekday: 'short', year: 'numeric', month: 'short', day: 'numeric' });
 
-// WORKING VISITOR COUNTER (Local Storage)
-let currentCount = localStorage.getItem('site_visitors') || 1050; // Starts from 1050 if new
+// WORKING VISITOR COUNTER
+let currentCount = localStorage.getItem('site_visitors') || 1050;
 currentCount = parseInt(currentCount) + 1;
 localStorage.setItem('site_visitors', currentCount);
 document.getElementById('count-display').innerText = currentCount.toLocaleString();
@@ -300,12 +330,56 @@ window.onscroll = function() {
   else btn.style.display = "none";
 };
 
-// LEGAL PAGES
+// Elaborated Pages for Google Ranking
 const pages = {
-  about: `<h2>About Us</h2><p>Gramin Sewa Center is a digital aggregator platform built in 2026. We provide a single gateway to access official Indian and Assam state government services, helping rural citizens save time and effort.</p>`,
-  contact: `<h2>Contact Us</h2><p>WhatsApp: +91 7086402180</p><p>Location: Assam, India.</p>`,
-  privacy: `<h2>Privacy Policy</h2><p>We do not store your personal data. Our portal only provides links to official government websites.</p>`,
-  terms: `<h2>Terms</h2><p>We are a directory service and not responsible for any issues on the linked government portals.</p>`
+  about: `
+    <h2>About Gramin Sewa Center</h2>
+    <p><strong>Gramin Sewa Center</strong> is India's leading digital aggregator platform dedicated to bridging the gap between government services and rural citizens. Established with the vision of <em>"Digital Empowerment for All,"</em> we provide a seamless, one-stop interface to access essential central and state government services.</p>
+    <h3>Our Mission</h3>
+    <p>Our primary mission is to eliminate the complexity of navigating multiple government websites. We bring transparency and accessibility to the fingertips of every citizen, especially in the rural areas of Assam and across India. By using our portal, users can save time and effort in finding official links for critical documentation.</p>
+    <h3>What We Offer?</h3>
+    <ul>
+      <li>Direct access to Aadhaar, PAN, and Voter ID services.</li>
+      <li>Specialized focus on Assam State services like RCMS, Dharitree, and Sewa Setu.</li>
+      <li>Agriculture-based support for farmers including PM Kisan and NFSA Ration Card services.</li>
+      <li>Educational admission links and Job portal direct access.</li>
+    </ul>
+    <p>We believe that information is power. Gramin Sewa Center is committed to keeping you updated with the latest 2026 digital infrastructure.</p>
+  `,
+  contact: `
+    <h2>Contact Us</h2>
+    <p>Have questions or need assistance with any digital service? Our support team is here to help you navigate through the official portals.</p>
+    <h3>Customer Support</h3>
+    <p><strong>WhatsApp Support:</strong> <a href="https://WA.me/917086402180">+91 7086402180</a> (Mon-Sat, 9 AM to 7 PM)</p>
+    <p><strong>Official Email:</strong> support@graminsewacenter.in</p>
+    <h3>Headquarters</h3>
+    <p>Our digital operation hub is located in Assam, North East India. We serve thousands of users daily across various districts including Kamrup, Nagaon, Barpeta, and beyond.</p>
+    <p>Feel free to reach out for feedback or suggestions to improve our aggregator platform. Your input helps us serve the community better.</p>
+  `,
+  privacy: `
+    <h2>Privacy Policy</h2>
+    <p>At Gramin Sewa Center, we prioritize your data security and privacy. Since we function as a digital gateway, it is important to understand how information is handled.</p>
+    <h3>1. Data Collection</h3>
+    <p>We <strong>do not collect</strong> or store any personal sensitive data like your Aadhaar number, PAN details, or bank passwords. All transactions and applications happen directly on the official government servers (.gov.in sites).</p>
+    <h3>2. External Links</h3>
+    <p>Our website contains links to third-party government websites. Once you click on these links and leave our portal, we do not have control over those websites. Please review the privacy policy of each government site you visit.</p>
+    <h3>3. Cookies</h3>
+    <p>We use minimal cookies only to improve your browsing experience and remember your theme preferences (Dark/Light mode). No personal identifying information is stored in these cookies.</p>
+    <h3>4. Consent</h3>
+    <p>By using our website, you hereby consent to our privacy policy and agree to its terms. We are committed to maintaining a safe environment for Digital India users.</p>
+  `,
+  terms: `
+    <h2>Terms and Conditions</h2>
+    <p>Welcome to Gramin Sewa Center. By accessing this website, you agree to comply with the following terms and conditions of use.</p>
+    <h3>1. Use of Service</h3>
+    <p>Gramin Sewa Center acts as an aggregator/directory. We provide direct links to official government portals for the convenience of the public. We are not a government entity, nor do we claim to be an official representative of UIDAI, ECI, or any other government body.</p>
+    <h3>2. Accuracy of Information</h3>
+    <p>While we strive to provide the most updated and accurate links for 2026, we are not responsible for any changes made by the government on their respective websites. Users are advised to verify the information on the official portals before proceeding with payments or documentation.</p>
+    <h3>3. Limitation of Liability</h3>
+    <p>Gramin Sewa Center shall not be liable for any errors, delays, or issues arising during your application process on external government websites. Any fees paid on government portals are handled by the respective departments, and we do not process any financial payments on our platform.</p>
+    <h3>4. Modification of Terms</h3>
+    <p>We reserve the right to change these terms at any time. Your continued use of the site signifies your acceptance of any updated terms.</p>
+  `
 };
 
 function showPage(pageKey) {
@@ -313,25 +387,23 @@ function showPage(pageKey) {
   document.getElementById('legalModal').style.display = "block";
 }
 function closeModal() { document.getElementById('legalModal').style.display = "none"; }
-window.onclick = function(event) { if (event.target == document.getElementById('legalModal')) closeModal(); }
 
 function runSearch() {
   const input = document.getElementById('mainSearch').value.toLowerCase();
   const cards = document.querySelectorAll('.card');
-  const sections = document.querySelectorAll('.section-title');
   cards.forEach(card => card.style.display = card.innerText.toLowerCase().includes(input) ? "flex" : "none");
-  sections.forEach(title => {
-    const nextGrid = title.nextElementSibling;
-    let visible = false;
-    if(nextGrid) {
-        nextGrid.querySelectorAll('.card').forEach(c => { if(c.style.display !== 'none') visible = true; });
-        title.style.display = visible ? 'flex' : 'none';
-    }
-  });
 }
 function scrollToSection(id) {
   const target = document.getElementById(id);
   if (target) window.scrollTo({ top: target.offsetTop - 20, behavior: 'smooth' });
+}
+
+// Close modal when clicking outside
+window.onclick = function(event) {
+    let modal = document.getElementById('legalModal');
+    if (event.target == modal) {
+        closeModal();
+    }
 }
 </script>
 </body>
