--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@ footer { background: #06172e; color: white; text-align: center; padding: 60px 20
 </style>
 </head>
 <body data-theme="light">
+  <script async src="https://cse.google.com/cse.js?cx=1763b02da22d34163">
+</script>
+<div class="gcse-search"></div>
 
 <div class="info-bar-container">
   <div class="scrolling-text">
